@@ -93,6 +93,7 @@
 				</dependencies>
 				<configuration>
 					<argLine>
+						--add-opens jdo.core/test.jutil.jdo.executor.parameter=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
